<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detail_neighbour"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.neighbour_list.DetailNeighbour">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/photoLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent=".35"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/detailLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/nameLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            >

            <TextView
                android:id="@+id/textName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="33sp"
                android:paddingLeft="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/space"
                tools:text="Caroline"
                android:textColor="@color/white"/>

            <android.support.v4.widget.Space
                android:id="@+id/space"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textName"
                app:layout_constraintEnd_toStartOf="@+id/addFavorite"
                />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/addFavorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                app:backgroundTint="@color/white"
                android:src="@drawable/ic_baseline_star_outline_24"
                android:layout_marginRight="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/space"
                app:layout_constraintTop_toTopOf="parent" />



        </android.support.constraint.ConstraintLayout>


    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
        android:id="@+id/detailLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintHeight_percent=".65"
        app:layout_constraintTop_toBottomOf="@+id/photoLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/layoutAbout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent=".50"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/LayoutName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                app:layout_constraintBottom_toTopOf="@id/LayoutAdresse"
                app:layout_constraintEnd_toEndOf="@+id/constraintLayout2"
                app:layout_constraintStart_toStartOf="@+id/constraintLayout2"
                app:layout_constraintTop_toTopOf="@+id/constraintLayout2">


                <TextView
                    android:id="@+id/textName2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="@+id/LayoutName"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/LayoutName"
                    tools:text="Caroline" />

            </android.support.constraint.ConstraintLayout>


            <android.support.constraint.ConstraintLayout
                android:id="@+id/LayoutAdresse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/LayoutPhone"
                app:layout_constraintEnd_toEndOf="@+id/constraintLayout2"
                app:layout_constraintStart_toStartOf="@+id/constraintLayout2"
                app:layout_constraintTop_toBottomOf="@+id/LayoutName">

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@+id/LayoutAdresse"
                    app:layout_constraintEnd_toStartOf="@+id/adresse"
                    app:layout_constraintStart_toStartOf="@+id/LayoutAdresse"
                    app:layout_constraintTop_toTopOf="@+id/LayoutAdresse"
                    app:srcCompat="@drawable/ic_address" />



                <TextView
                    android:id="@+id/adresse"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    app:layout_constraintBottom_toBottomOf="@+id/LayoutAdresse"
                    app:layout_constraintEnd_toEndOf="@+id/LayoutAdresse"
                    app:layout_constraintStart_toEndOf="@+id/imageView7"
                    app:layout_constraintTop_toTopOf="@+id/LayoutAdresse"
                    tools:text="adress" />

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/LayoutPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/LayoutUrl"
                app:layout_constraintEnd_toEndOf="@+id/constraintLayout2"
                app:layout_constraintStart_toStartOf="@+id/constraintLayout2"
                app:layout_constraintTop_toBottomOf="@+id/LayoutAdresse">

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@+id/LayoutPhone"
                    app:layout_constraintEnd_toStartOf="@+id/phoneNumber"
                    app:layout_constraintStart_toStartOf="@+id/LayoutPhone"
                    app:layout_constraintTop_toTopOf="@+id/LayoutPhone"
                    app:srcCompat="@drawable/ic_baseline_local_phone_24" />



                <TextView
                    android:id="@+id/phoneNumber"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    app:layout_constraintBottom_toBottomOf="@+id/LayoutPhone"
                    app:layout_constraintEnd_toEndOf="@+id/LayoutPhone"
                    app:layout_constraintStart_toEndOf="@+id/imageView8"
                    app:layout_constraintTop_toTopOf="@+id/LayoutPhone"
                    tools:text="PhoneNumber" />

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/LayoutUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/constraintLayout2"
                app:layout_constraintEnd_toEndOf="@+id/constraintLayout2"
                app:layout_constraintStart_toStartOf="@+id/constraintLayout2"
                app:layout_constraintTop_toBottomOf="@+id/LayoutPhone">

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@+id/LayoutUrl"
                    app:layout_constraintEnd_toStartOf="@+id/urlAddress"
                    app:layout_constraintStart_toStartOf="@+id/LayoutUrl"
                    app:layout_constraintTop_toTopOf="@+id/LayoutUrl"
                    app:srcCompat="@drawable/ic_baseline_language_24" />


                <TextView
                    android:id="@+id/urlAddress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    app:layout_constraintBottom_toBottomOf="@+id/LayoutUrl"
                    app:layout_constraintEnd_toEndOf="@+id/LayoutUrl"
                    app:layout_constraintStart_toEndOf="@+id/imageView9"
                    app:layout_constraintTop_toTopOf="@+id/LayoutUrl"
                    tools:text="UrlAdress" />
            </android.support.constraint.ConstraintLayout>

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/layoutAbout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent=".40"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">


            <TextView
                android:id="@+id/apropoLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/apropos"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/aboutMe2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/layoutAbout" />

            <TextView
                android:id="@+id/aboutMe2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center|start"
                android:layout_marginLeft="10dp"
                android:backgroundTint="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/layoutAbout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/apropoLabel" />

        </android.support.constraint.ConstraintLayout>

    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>